welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:7: error: type mismatch;
 found   : Unit
 required: Int
  } else if (max > 20) {
                       ^max1020:7: error: type mismatch;
 found   : Unit
 required: Int
  } else if (max > 20) {
         ^